# zsh-history-cleaner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Pipfile  README.md  Readme.md  cliff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  pythonapp.yml  release.yml  test-lint.yml  test.yml
src/: analyze.rs  entry.rs  errors.rs  filters.rs  history.rs  history_entry.rs  lib.rs  main.rs  util.rs  utils.rs
src/utils/: zsh_line.rs
test_helpers/: Cargo.toml
test_helpers/src/: lib.rs
tests/: cli_tests.rs  pytest.ini  test_cleaner_duplicates.py  test_duplicates.py  test_history.py  test_history_cleaner.py  test_integration.rs  test_parse_history_entry.py  test_parser.py  test_remove_duplicate.py  test_remove_timestamp.py
zshhistorycleaner/: __init__.py  cleaner.py  cli.py  exceptions.py  history.py  main.py
