[package]
name = "zsh-history-cleaner"
version = "0.3.2"
edition = "2024"
description = "Clean your commands history by removing duplicate commands, commands between dates, etc..."
repository = "https://github.com/haidaraM/zsh-history-cleaner"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "filesystem"]
authors = ["Mohamed El Mouctar HAIDARA"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bin]]
name = "zhc"
path = "src/main.rs"
test = true

[dependencies]
thiserror = "2.0.16"
regex = "1.11.3"
clap = { version = "4.5.48", features = ["derive", "color"] }
once_cell = "1.21.3"
chrono = "0.4.42"
expand-tilde = "0.6.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
test_helpers = { path = "test_helpers" }

# https://github.com/crate-ci/cargo-release
[package.metadata.release]
allow-branch = [
    "main",
    "HEAD", # for CI environments that use detached HEAD
]
tag-name = "{{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
